--- a/assets/sass/helpers/_project-mixins.scss
+++ b/assets/sass/helpers/_project-mixins.scss
@@ -176,3 +176,40 @@
 	@include z-index(popup);
 	@include flex-center;
 }
+
+@mixin accent-link {
+	position: relative;
+	&:before {
+		position: absolute;
+		bottom: -.2rem;
+		left: 0;
+		content: '';
+		width: 0;
+		border-bottom: .1rem solid $white;
+		transition: all .3s ease;
+		transform-origin: left;
+	}
+
+	&.dark {
+		&:before {
+			border-color: $dark;
+		}
+	}
+	&.white {
+		&:before {
+			border-color: $white;
+		}
+	}
+
+	&.yellow {
+		&:before {
+			border-color: $yellow;
+		}
+	}
+
+	&:hover, &.current-page-item, &.current-item {
+		&:before {
+			width: 100%;
+		}
+	}
+}
