--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -15,6 +15,9 @@
 		display: flex;
 	}
 	li {
+		a {
+			@include accent-link;
+		}
 		&:not(:last-child) {
 			margin-right: 4.5rem;
 		}
@@ -22,19 +25,13 @@
 			font-size: 2rem;
 			color: $white;
 		}
-		&:hover {
-			transform: scale(1.1);
-			transition: all .4s;
-		}
 	}
 }
 .header_mobil {
-	p {
-		font-size: 2.5rem;
-		color: $yellow;
-	}
-	&:hover {
-		transform: scale(1.1);
-		transition: all .4s;
+	font-size: 2.5rem;
+	color: $yellow;
+	a {
+		color: inherit;
+		@include accent-link;
 	}
 }
